# Trog

./: Cargo.toml  README.md
feeds/: Cargo.toml
feeds/src/: lib.rs
gui/: Cargo.toml  build.rs
gui/resources/: resources.xml  style.css
gui/src/: futures.rs  main.rs  markdown.rs
gui/src/model/: app.rs  channel.rs  channels.rs  items.rs  mod.rs
gui/src/ui/: channels.rs  items.rs  mod.rs
storage/: Cargo.toml
storage/src/: app.rs  channel.rs  channels.rs  item.rs  items.rs  lib.rs
