[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies.gtk]
package = "gtk4"
version = "0.4.8"

[dependencies.adw]
package = "libadwaita"
version = "0.2.0-alpha.2"

[dependencies.feeds]
path = "../feeds"

[dependencies.storage]
path = "../storage"

[build-dependencies]
gio = "0.15.12"
